@startuml

title __SORTOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace sortOperators {
      class gr.ds.unipi.noda.api.redisearch.sortOperators.OperatorAsc {
          # getOperatorField()
          {static} ~ newOperatorAsc()
          - OperatorAsc()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace sortOperators {
      class gr.ds.unipi.noda.api.redisearch.sortOperators.OperatorDesc {
          # getOperatorField()
          {static} ~ newOperatorDesc()
          - OperatorDesc()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace sortOperators {
      class gr.ds.unipi.noda.api.redisearch.sortOperators.RedisSortOperatorFactory {
          + newOperatorAsc()
          + newOperatorDesc()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace sortOperators {
      abstract class gr.ds.unipi.noda.api.redisearch.sortOperators.SortOperator {
          + getOperatorExpression()
          {abstract} # getOperatorField()
          ~ SortOperator()
      }
    }
  }
  

  gr.ds.unipi.noda.api.redisearch.sortOperators.OperatorAsc -up-|> gr.ds.unipi.noda.api.redisearch.sortOperators.SortOperator
  gr.ds.unipi.noda.api.redisearch.sortOperators.OperatorDesc -up-|> gr.ds.unipi.noda.api.redisearch.sortOperators.SortOperator
  gr.ds.unipi.noda.api.redisearch.sortOperators.RedisSortOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.sortOperators.BaseSortOperatorFactory
  gr.ds.unipi.noda.api.redisearch.sortOperators.SortOperator -up-|> gr.ds.unipi.noda.api.core.operators.sortOperators.SortOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
